finish tweak the result page
Signed-off-by: Zhiyiw <Zhiyiw@uoregon.edu>

--- a/DatabaseOperation/web/print.xhtml
+++ b/DatabaseOperation/web/print.xhtml
@@ -35,6 +35,13 @@
 
 		}
 		
+		.ui-tree{
+		
+		 background-color:transparent;	
+		 border-style:none;
+		
+		}
+		
 		.treeP2{
 			  	vertical-align: top;
 				float:right;			
@@ -118,12 +125,30 @@
 .result_status_content{
 		float:left;
 	 width:709px;
-	 height:157px
+	 height:157px;
 	 overflow:auto;
-	 background-image:url(images/result_status_content.png);
-	  background-repeat:repeat-y;
+  //background-color:transparent;	
+  background: #9BD166; 
+   border-style:none;
+//	 background-image:url(images/result_status_content.png);
+//	  background-repeat:repeat-y;
 	
 	
+}
+
+.ui-datalist-content {
+border: none;
+//border-radius: 15px;
+background: #9BD166; 
+//background-color:transparent;	
+}
+
+
+.result_status_content_datalist{
+
+  background-color:transparent;	
+ border-style:none;
+
 }
 
 
@@ -174,7 +199,6 @@ color:#336699
 
 
 
-
 .result { 
   clear:both;
   background:#DDDDDD;
@@ -182,26 +206,19 @@ color:#336699
 
 .result_top{
 	 width:1024px;
-	 height:77px;
+	 height:94px;
 	 background-image:url(images/result_top.png)
 	
 	
 }
 
-.result_left{
-	float:left;
-	 width:85px	;
-	 height:auto;
-	 background-image:url(images/result_left.png)
-	
-	
-}
+
 
 .result_content{
 		float:left;
 	 width:1024px;
 	 height:auto;
-	 background-image:url(images/result_r6_c1.png)
+	 background-image:url(images/result_bg.png)
 	
 	
 }
@@ -214,15 +231,6 @@ color:#3C3;
 }
 
 
-.result_right{
-	float:right;
-	 width:91px;
-	 height:200px:
-	 background-repeat:repeat-y;
-	 background-image:url(images/result_right.png)
-	
-	
-}
 
 
 
