--- a/DatabaseOperation/web/openid.xhtml
+++ b/DatabaseOperation/web/openid.xhtml
@@ -1,13 +1,15 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html">
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
     <h:head>
         <title>Facelet Title</title>
     </h:head>
     <h:body>
         <h:form>
-            <h:inputHidden value="#{openid.onLoad}"/>
+         <!--   <h:inputHidden value="#{openid.onLoad}"/> -->
  
             <h:outputLabel for="userSuppliedId" value="User Supplied Id: "/>
             <h:outputText id="userSuppliedId" value="#{openid.userSuppliedId}"/>
@@ -32,6 +34,9 @@
             <h:outputText id="language" value="#{openid.openIdLanguage}"/>
             <br/>
 		
+
+		<h:commandLink value="See Assignments" action="loginLoading.xhtml" />
+
            
         </h:form>
     </h:body>
