--- a/DatabaseOperation/web/assignmentDisplayStudent.xhtml
+++ b/DatabaseOperation/web/assignmentDisplayStudent.xhtml
@@ -12,7 +12,7 @@
 
 
 <link rel="stylesheet/less" type="text/css" href="css/assignmentDisplayStudent.less" ></link>
-    
+<script src='js/jquery-1.8.0.min.js'/>
 <script src="js/less.js" type="text/javascript"></script>
 
 
@@ -60,6 +60,11 @@ function cancelout(){
 
 function canceldown(){
 	document.buttonCancel.src="images/cancel_s2.png";
+}
+
+function checkValue(){
+	if($('#out1').val()=='Choose a file...')
+		alert('you need to upload your *.zip file!');
 }
 
 </script>
@@ -190,7 +195,7 @@ function canceldown(){
 			</p:outputPanel>
 			<h:outputText id="out1" value="#{compare.selectedFilename}" /> 
 			<p:outputPanel layout="block" style="position:absolute;top:180px;left:75px">
-			<h:commandButton type="submit" onmouseover="this.src ='images/upload_s1.png'" onmouseout="this.src='images/upload_s0.png'" onmousedown="this.src='images/upload_s2.png'" action="#{compare.tempUpload(login.username,gradestudentBean.selectedAssignment.assignmentDirectory, gradestudentBean.selectedAssignment.assignmentID)}" image="/images/upload_s0.png" />
+			<h:commandButton type="submit" onmouseover="this.src ='images/upload_s1.png'" onmouseout="this.src='images/upload_s0.png'" onmousedown="this.src='images/upload_s2.png'" action="#{compare.tempUpload(login.username,gradestudentBean.selectedAssignment.assignmentDirectory, gradestudentBean.selectedAssignment.assignmentID)}" image="/images/upload_s0.png" onclick='checkValue();'/>
 			</p:outputPanel>
 			
 			<p:outputPanel layout="block" style="position:absolute;top:180px;right:59px">
