Show invisible components in tree view

--- a/DatabaseOperation/web/assignmentDisplayStudent.xhtml
+++ b/DatabaseOperation/web/assignmentDisplayStudent.xhtml
@@ -113,7 +113,7 @@ function canceldown(){
         	<p:rating value="#{a.assignmentRating}" stars="5" cancel="false" disabled="true"/> 
         </p:column>
                 
-       	<p:column headerText="Tried Times">  
+       	<p:column headerText="Attempts">  
             #{a.assignmentTries}  
         </p:column>
         
