make rating read-only not just disabled

--- a/DatabaseOperation/web/assignmentDisplayStudent.xhtml
+++ b/DatabaseOperation/web/assignmentDisplayStudent.xhtml
@@ -110,7 +110,7 @@ function canceldown(){
         </p:column>
         
         <p:column headerText="Rating" sortBy="#{a.assignmentRating}">
-        	<p:rating value="#{a.assignmentRating}" stars="5" cancel="false" disabled="true"/> 
+        	<p:rating value="#{a.assignmentRating}" stars="5" cancel="false" readonly="true"/> 
         </p:column>
                 
        	<p:column headerText="Attempts">  
