--- a/DatabaseOperation/web/print.xhtml
+++ b/DatabaseOperation/web/print.xhtml
@@ -6,6 +6,8 @@
 
 <h:head>
 
+<title>Comparison Results</title>
+
 <link rel="stylesheet/less" type="text/css" href="css/print.less" ></link>
     
 <script src="js/less.js" type="text/javascript"></script>
@@ -21,7 +23,7 @@
 
 <p:outputPanel layout="block" styleClass="result_return_panel">
 <p:outputPanel layout="block" styleClass="result_return">
-	<h:form layout="block" styleClass="result_return">
+	<h:form>
         <h:commandButton value="backToassignments" action="assignmentDisplayStudent.xhtml" image="/images/result_return.png" />
         </h:form>
 </p:outputPanel>
