--- a/DatabaseOperation/web/profileLoading.xhtml
+++ b/DatabaseOperation/web/profileLoading.xhtml
@@ -16,7 +16,7 @@
 
 
 <div id="loading" style="position:absolute; width:100%; text-align:center;">
-<img src="/images/loading.gif" border="0" onLoad="lazyload()"/></div>
+<img src="images/loading.gif" border="0" onLoad="lazyload()"/></div>
 
 </h:body>
 </html>
