--- a/DatabaseOperation/web/profileDisplay.xhtml
+++ b/DatabaseOperation/web/profileDisplay.xhtml
@@ -8,9 +8,9 @@
 <h:body>
 <h:outputText value="User ID:" />#{profileBean.pm.userID}<br />
 <h:outputText value="Total Attemps:" />#{profileBean.pm.totalAttempts}<br />
-<h:outputText value="Completeness Percentage:" />#{profileBean.pm.completenessPercent}<br />
+<h:outputText value="Completeness Percentage:" />#{profileBean.pm.completenessPercent} %<br />
 <h:outputText value="Highest Rating:" />#{profileBean.pm.highestRating}<br />
-<h:outputText value="Success Rate:" />#{profileBean.pm.successRate}<br />
+<h:outputText value="Success Rate:" />#{profileBean.pm.successRate} %<br />
 <h:outputText value="Total Score:" />#{profileBean.pm.totalScore}<br />
 </h:body>
 </html>
