add and modifly titles for many pages
Signed-off-by: Zhiyiw <Zhiyiw@uoregon.edu>

--- a/DatabaseOperation/web/adminLoginLoading.xhtml
+++ b/DatabaseOperation/web/adminLoginLoading.xhtml
@@ -5,6 +5,9 @@
       xmlns:p="http://primefaces.org/ui">
 
 <h:head>
+
+ <title>App UI Grader loading</title>
+
 <meta http-equiv="refresh" content="1; URL=assignmentsDisplay.xhtml" />
 </h:head>
 <h:body>
