--- a/DatabaseOperation/web/assignmentsDisplay.xhtml
+++ b/DatabaseOperation/web/assignmentsDisplay.xhtml
@@ -4,6 +4,8 @@
       xmlns:p="http://primefaces.org/ui">
 
 <h:head>
+<title>App UI Grader assignment management</title>
+
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1"></meta>
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"></meta>
 <meta http-equiv="Pragma" content="no-cache"></meta>
