--- a/DatabaseOperation/web/login.xhtml
+++ b/DatabaseOperation/web/login.xhtml
@@ -5,6 +5,7 @@
       xmlns:p="http://primefaces.org/ui">
 
 <h:head>
+  <title>App UI Grader Student Login</title>
 
 <link rel="stylesheet/less" type="text/css" href="css/login.less" ></link>
     
