--- a/DatabaseOperation/web/loginErr1.xhtml
+++ b/DatabaseOperation/web/loginErr1.xhtml
@@ -5,6 +5,8 @@
 	xmlns:p="http://primefaces.org/ui">
 
 <h:head>
+
+<title>App UI Grader Error</title>
 <link rel="stylesheet/less" type="text/css" href="css/loginErr.less" ></link>
     
 <script src="js/less.js" type="text/javascript"></script>
