--- a/DatabaseOperation/web/loginErr2.xhtml
+++ b/DatabaseOperation/web/loginErr2.xhtml
@@ -6,7 +6,7 @@
 
 <h:head>
 
-
+<title>App UI Grader Error</title>
 <link rel="stylesheet/less" type="text/css" href="css/loginErr.less" ></link>
     
 <script src="js/less.js" type="text/javascript"></script>
