--- a/DatabaseOperation/web/profileLoading.xhtml
+++ b/DatabaseOperation/web/profileLoading.xhtml
@@ -5,6 +5,8 @@
       xmlns:p="http://primefaces.org/ui">
 
 <h:head>
+
+<title>App UI Grader Loading</title>
 <meta http-equiv="refresh" content="1; URL=profileDisplay.xhtml" />
 </h:head>
 <h:body>
