--- a/DatabaseOperation/web/register.xhtml
+++ b/DatabaseOperation/web/register.xhtml
@@ -5,6 +5,8 @@
       xmlns:p="http://primefaces.org/ui">
 
         <h:head>
+        
+        <title>App UI Grader:Register</title>
 
 <link rel="stylesheet/less" type="text/css" href="css/register.less" ></link>
     
