--- a/DatabaseOperation/web/result.html
+++ b/DatabaseOperation/web/result.html
@@ -2,7 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Comapre Results</title>
+<title>App UI Grader:Comapre Results</title>
+
 <link href="result.css" rel="stylesheet" type="text/css" />
 </head>
 
