--- a/DatabaseOperation/web/assignmentDisplayStudent.xhtml
+++ b/DatabaseOperation/web/assignmentDisplayStudent.xhtml
@@ -4,6 +4,9 @@
       xmlns:p="http://primefaces.org/ui">
 
 <h:head>
+
+<title>App UI Grader: Assignment display</title>
+
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1"></meta>
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"></meta>
 <meta http-equiv="Pragma" content="no-cache"></meta>
@@ -11,7 +14,7 @@
 
 
 <link rel="stylesheet/less" type="text/css" href="css/assignmentDisplayStudent.less" ></link>
-<script src='js/jquery-1.8.0.min.js'/>
+
 <script src="js/less.js" type="text/javascript"></script>
 
 
