--- a/DatabaseOperation/web/blockPrint.xhtml
+++ b/DatabaseOperation/web/blockPrint.xhtml
@@ -6,7 +6,7 @@
 
 <h:head>
 
-<title>Comparison Block View</title>
+<title>App UI Grader: Comparison Block View</title>
 
 <link rel="stylesheet/less" type="text/css" href="css/blockPrint.less" ></link>
     
