--- a/DatabaseOperation/web/loginLoading.xhtml
+++ b/DatabaseOperation/web/loginLoading.xhtml
@@ -4,6 +4,9 @@
       xmlns:p="http://primefaces.org/ui">
 
 <h:head>
+<title>App UI Grader loading</title>
+
+
 <meta http-equiv="refresh" content="1; URL=assignmentDisplayStudent.xhtml" />
 </h:head>
 <h:body>
