--- a/DatabaseOperation/web/openid.xhtml
+++ b/DatabaseOperation/web/openid.xhtml
@@ -5,7 +5,7 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:p="http://primefaces.org/ui">
     <h:head>
-        <title>Facelet Title</title>
+        <title>Open ID authentication successful.</title>
     </h:head>
     <h:body>
         <h:form>
