can how history

--- a/DatabaseOperation/web/assignmentDisplayStudent.xhtml
+++ b/DatabaseOperation/web/assignmentDisplayStudent.xhtml
@@ -143,7 +143,7 @@ function checkValue(){
     
     
     <p:dialog  resizable="false" styleClass="table_showhistory" id="dlgSingleLogDisplay" widgetVar="dlgSingleLog" modal="true" draggable="false" width="500" height="400">  
-	<h:outputText value="#{gradestudentBean.selectedAssignment.assignmentDirectory}"/>
+	<h:outputText value="#{gradestudentBean.selectedAssignment.assignmentHistory}"/>
 	</p:dialog>
 	
 	<p:dialog id="screenshot" widgetVar="lightbox">
