--- a/DatabaseOperation/web/print.xhtml
+++ b/DatabaseOperation/web/print.xhtml
@@ -96,6 +96,10 @@ document.onkeydown = function() {
 		<p:tree value="#{compare.frame.tree1.root}" var="node1" id="tree1"
 			animate="true">
 			
+			<p:treeNode type="empty" icon="label">
+				<h:outputText value="#{node1}"/>
+			</p:treeNode>
+			
 			<p:treeNode type="Label" icon="label">
 				<h:outputText value="#{node1}"/>
 			</p:treeNode>
@@ -281,6 +285,10 @@ document.onkeydown = function() {
 	<h:form id="showTree2">
 		<p:tree value="#{compare.frame.tree2.root}" var="node2" id="tree2"
 			animate="true">
+			
+			<p:treeNode type="empty" icon="label">
+				<h:outputText value="#{node2}"/>
+			</p:treeNode>
 			
 			<p:treeNode type="Label" icon="label">
 				<h:outputText value="#{node2}"/>
