--- a/DatabaseOperation/web/toolBar.xhtml
+++ b/DatabaseOperation/web/toolBar.xhtml
@@ -3,6 +3,11 @@
     xmlns:f="http://java.sun.com/jsf/core"
     xmlns:h="http://java.sun.com/jsf/html"
     xmlns:ui="http://java.sun.com/jsf/facelets">
-    <h2>Include page</h2>
-    <p>Include page blah blah lorem ipsum</p>
+    <h2>Tool Bar</h2>
+    <h:form>
+    	<h:commandLink action="profileLoading.xhtml" value="Profile" />
+	</h:form>
+	<h:form>
+	<h:commandLink value="Help" />
+    </h:form>
 </ui:composition>
