add logout link

--- a/DatabaseOperation/web/toolBar.xhtml
+++ b/DatabaseOperation/web/toolBar.xhtml
@@ -5,4 +5,8 @@
     xmlns:ui="http://java.sun.com/jsf/facelets">
     <h2>Include page</h2>
     <p>Include page blah blah lorem ipsum</p>
+    
+    <h:form>
+    <h:commandLink action="#{logout.logout()}" value="#{openid.openIdFirstName}, logout" />
+    </h:form>
 </ui:composition>
