Auto Direct After Login with Gmail Account

--- a/DatabaseOperation/web/assignmentDisplayStudent.xhtml
+++ b/DatabaseOperation/web/assignmentDisplayStudent.xhtml
@@ -99,6 +99,9 @@ function checkValue(){
     </p:outputPanel>
     
     
+    <h:form>
+    	<h:commandButton action="profileLoading.xhtml" value="Profile" />
+	</h:form>
 	 
 	<p:outputPanel layout="block" styleClass="ring">
 	<h:form>
