--- a/DatabaseOperation/web/openid.xhtml
+++ b/DatabaseOperation/web/openid.xhtml
@@ -6,6 +6,8 @@
       xmlns:p="http://primefaces.org/ui">
     <h:head>
         <title>Open ID authentication successful.</title>
+        <meta http-equiv="refresh" content="1; URL=loginLoading.xhtml" />
+        
     </h:head>
     <h:body>
         <h:form>
