Show admin name on admin page

--- a/DatabaseOperation/web/assignmentsDisplay.xhtml
+++ b/DatabaseOperation/web/assignmentsDisplay.xhtml
@@ -1,6 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui">
 
 <h:head>
@@ -66,6 +67,7 @@ function canceldown(){
 	
 </h:head>
 <h:body>
+	<ui:include src="/toolBarAdmin.xhtml" />
 
 	<p:outputPanel layout="block" styleClass="mainFrame">
     
