fix the profile button bug in student view page
Signed-off-by: Zhiyiw <Zhiyiw@uoregon.edu>

--- a/DatabaseOperation/web/assignmentDisplayStudent.xhtml
+++ b/DatabaseOperation/web/assignmentDisplayStudent.xhtml
@@ -102,10 +102,10 @@ function checkValue(){
     </h:form>
     </p:outputPanel>
     
-    
+   <!--  
     <h:form>
     	<h:commandButton action="profileLoading.xhtml" value="Profile" />
-	</h:form>
+	</h:form> -->
 	 
 	<p:outputPanel layout="block" styleClass="ring">
 	<h:form>
