--- a/DatabaseOperation/web/loginLoading.xhtml
+++ b/DatabaseOperation/web/loginLoading.xhtml
@@ -1,3 +1,6 @@
+<?xml version='1.0' encoding='UTF-8' ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
@@ -12,13 +15,16 @@
 <h:body>
 
 <h:form>
-
 <p:remoteCommand name="lazyload" action="#{gradestudentBean.getStudentAssignmentList(openid.openIdEmail)}" />
 </h:form>
 
 
 <div id="loading" style="position:absolute; width:100%; text-align:center;">
 <img src="images/loading.gif" border="0" onLoad="lazyload()"/></div>
+
+        <h:form>
+            <h:outputText style="visibility:hidden;" value="#{openid.userSuppliedId}" />            
+        </h:form>
 
 </h:body>
 </html>
