modified admin page UI

--- a/DatabaseOperation/web/assignmentDisplayStudent.xhtml
+++ b/DatabaseOperation/web/assignmentDisplayStudent.xhtml
@@ -130,7 +130,7 @@ function checkValue(){
         	<p:rating value="#{a.assignmentRating}" stars="5" cancel="false" readonly="true"/> 
         </p:column>
         
-        <p:column headerText="Point" sortBy="#{a.assignmentPoint}">
+        <p:column style="text-align: right;" headerText="Point" sortBy="#{a.assignmentPoint}">
         	#{a.assignmentPoint} px
         </p:column>
                 
